# jenkins_testing

./: .gitignore  Jenkinsfile  main.py  pyproject.toml  requirements.txt
